# blaze

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: performance.md
include/: blaze.hpp  config.hpp  fuzzy_matcher.hpp  highlighter.hpp  io.hpp  matcher.hpp  types.hpp
src/: CMakeLists.txt  blaze.cpp  config.cpp  fuzzy_matcher.cpp  highlighter.cpp  io.cpp  main.cpp  matcher.cpp
tests/: CMakeLists.txt  fuzz_test.cpp
